# burt-build

./: .gitignore  Cargo.toml  build.burt
.github/workflows/: tests.yml
src/: args.rs  main.rs
src/builder/: artifact.rs  build.rs  container.rs  hashfile.rs  mod.rs  template.rs
src/file/: error.rs  mod.rs  parse.rs  types.rs
tests/: main.rs
tests/data/basic/: copy.burt  copy.toml  export-item.burt  export-item.toml  from-target-2.burt  from-target.burt  from-target.toml  hello.burt  hello.toml  hello.txt  set.burt  set.toml  template.burt  template.toml  workdir.burt  workdir.toml
tests/data/error/: empty.toml  empty.txt  invalid-cmd.burt  invalid-cmd.toml  invalid-workdir-syntax.burt  invalid-workdir-syntax.toml  notarget.burt  notarget.toml  notarget.txt
