[package]
name = "burt-build"
version = "0.1.0"
edition = "2024"
default-run = "burt"

[[bin]]
name = "burt"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1"
rstest = "0.25.0"
toml = "0.8"

[dependencies]
anyhow = "1.0.96"
base64 = "0.22.1"
clap = { version = "4.5.31", features = ["derive"] }
minijinja = { version = "2.8.0", features = ["json"] }
nom = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.8"
tar = "0.4.44"
tempfile = "3.18"
